Add contents of the macaroon recipe page

--- a/recipes/macaroons.html
+++ b/recipes/macaroons.html
@@ -7,5 +7,40 @@
 
     <body>
         <h1>Macaroon Recipe</h1>
+        <img src="../images/macaroon.jpeg">
+        <h2>Description</h2>
+        <p>
+            Fantabulous colored, bite-sized macaroons. Divide batter into thirds and 
+            color one-third pink and flavor with raspberry flavoring; color one-third
+            yellow and flavor with lemon flavoring; color one-third pale blue and flavor
+            with vanilla. Fill and make sandwich cookies with filling of choice, like 
+            peach jam or strawberry preserves.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 Egg Whites</li>
+            <li>6 Tbsp Castor Sugar</li>
+            <li>1 Cup Finely Ground Almonds</li>
+            <li>1.5 Tsp Finely Ground Almonds</li>
+            <li>1.3 Cups Confectioners' Sugar</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 320 degrees F. Line Baking sheet with parchment paper.</li>
+            <li>Whisk egg whites until thick; whisk castor sugar into egg whites until glossy
+                and holds stiff peaks.
+            </li>
+            <li>Place sieve over bowl and sieve both almond meal and confectioners' sugar into
+                the egg white mixture. Gently folding to retain as much air as possible.
+            </li>
+            <li>Separate the meringue into separate bowls to flavor and color. Spoon into piping bag
+                with a 3/8 in tip and pipe 1 inch disks onto the baking sheet.
+            </li>
+            <li>Let cookies stand at room temperature for about 15 minutes. Pick up and drop the 
+                baking sheet from several inches to adhere cookies to the backing sheet.
+            </li>
+            <li>Bake in preheated over until tops are dry; let cool completely before peeling them off.
+            </li>
+        </ol>
     </body>
 </html>
