--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/macaroons.html">Macaroons</a>
+        <ul>
+            <li><a href="recipes/macaroons.html">Macaroons</a></li>
+            <li><a href="recipes/brownies.html">Brownies</a></li>
+            <li><a href="recipes/shortbread.html">Shortbread</a></li>
+        </ul>
     </body>
 </html>
