--- a/recipes/macaroons.html
+++ b/recipes/macaroons.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Return to home page</a>
         <h1>Macaroon Recipe</h1>
         <img src="../images/macaroon.jpeg">
         <h2>Description</h2>
