Add css file and basic styling to pages

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>
             Brownies Recipe 
         </title>
@@ -10,7 +11,9 @@
     <body>
         <a href="../index.html">Return to home page</a>
         <h1>Brownies Recipe</h1>
-        <img src="../images/brownies.jpeg" alt="Picture of brownies">
+        <div id="center">
+            <img src="../images/brownies.jpeg" alt="Picture of brownies">
+        </div>
         <h2>Description</h2>
         <p>
             A chocolate brownie or simply a brownie is a square or rectangular 
