--- a/recipes/macaroons.html
+++ b/recipes/macaroons.html
@@ -2,13 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Macaroon Recipe</title>
     </head>
 
     <body>
         <a href="../index.html">Return to home page</a>
         <h1>Macaroon Recipe</h1>
-        <img src="../images/macaroon.jpeg">
+        <div id="center">
+            <img src="../images/macaroon.jpeg">
+        </div>
         <h2>Description</h2>
         <p>
             Fantabulous colored, bite-sized macaroons. Divide batter into thirds and 
