--- a/recipes/shortbread.html
+++ b/recipes/shortbread.html
@@ -2,13 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Shortbread Recipe</title>
     </head>
 
     <body>
         <a href="../index.html">Return to home page</a>
         <h1>Shortbread Recipe</h1>
-        <img src="../images/shortbread.jpeg" alt="Image of shortbread">
+        <div id="center">
+            <img src="../images/shortbread.jpeg" alt="Image of shortbread">
+        </div>
         <h2>Description</h2>
         <p>
             Shortbread or shortie is a traditional Scottish biscuit usually 
